manifest/app/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: todoapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: minhbui1/frontend
        name: frontend
        ports:
        - containerPort: 8080
          name: fport
        livenessProbe:
          httpGet:
            path: /
            port: fport
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 2
        readinessProbe:
          httpGet:
            path: /
            port: fport
          failureThreshold: 3
          initialDelaySeconds: 1
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 2
      restartPolicy: Always
